--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <span class="fa fa-bars menu-icon"></span>
         <div class="header-right">
-          <a href="#">Lessons</a>
+          <a href="#">Lessons Lessons</a>
           <a href="#">Sign in</a>
           <a href="#" class="login">Log in</a>
         </div>
